# RustyBits_EmbassyIntro

./: Cargo.toml  README.md
.cargo/: config.toml
src/: config.rs  lib.rs  main.rs  shared.rs
src/drivers/: mcu_temp.rs  mod.rs  sht31.rs
src/tasks/: blink.rs  button.rs  mcu_temp.rs  mod.rs  sht31.rs
