[package]
name = "RustyBits_EmbassyIntro"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
stm32f0xx-hal = { version = "0.18.0", features = ["stm32f072"] }

[[bin]]
name = "RustyBits_EmbassyIntro"
test = false
bench = false

[profile.release]
debug = 2
codegen-units = 1
lto = "fat"
opt-level = "s"
